# flower

baselines/flair/: .gitignore  README.md  pyproject.toml
baselines/flair/flair/: __init__.py  client.py  dataset.py  layer.py  main.py  metrics.py  models.py  module_modification.py  utils.py
baselines/flair/flair/conf/: base.yaml
